alerts is fixed using z-index

--- a/src/components/error-pages/error-messages.styles.scss
+++ b/src/components/error-pages/error-messages.styles.scss
@@ -4,4 +4,6 @@
         width: 650px;
         margin-left: 30%;
         text-align: center;
+        position: absolute;
+        z-index: 100;
     }
